--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "eslint-config-ts-lambdas",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
+  "description": "config of typescript-eslint for Lambdas style",
   "repository": "git@github.com:WittBulter/eslint-config-ts-lambdas.git",
   "author": "WittBulter <lambdas.dev@gmail.com>",
   "license": "MIT",
