--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.1",
   "main": "index.js",
   "description": "config of typescript-eslint for Lambdas style",
-  "repository": "git@github.com:WittBulter/eslint-config-ts-lambdas.git",
-  "author": "WittBulter <lambdas.dev@gmail.com>",
+  "repository": "git@github.com:unix/eslint-config-ts-lambdas.git",
+  "author": "unix <lambdas.dev@gmail.com>",
   "license": "MIT",
   "files": [
     "index.js",
