--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "description": "config of typescript-eslint for Lambdas style",
   "repository": "git@github.com:unix/eslint-config-ts-lambdas.git",
-  "author": "unix <lambdas.dev@gmail.com>",
+  "author": "unix <unix.bio@gmail.com>",
   "license": "MIT",
   "files": [
     "index.js",
