--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "rules.js"
+    "rules.js",
+    "react.js"
   ],
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": ">=1.6.0",
